Fixed z-index on JS messages so they are above gifs

--- a/pjuu/static/css/style.css
+++ b/pjuu/static/css/style.css
@@ -156,6 +156,7 @@ button:hover {
     left: 0;
     position: fixed;
     width: 100%;
+    z-index: 4;
 }
 
 .js-messages .message {
